# GPipeFractal

./: .travis.yml  GPipeFractal.cabal  GPipeFractal.hi  GPipeFractal.hs  LICENSE  README.md  cabal.project  fractal_fs.glsl
src/: Main.hs
