name:                GPipeFractal
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Mykola Pershyn
maintainer:          nikolay.pershyn@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=2.0

executable GPipeFractal
  main-is:             Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       base >=4.3 && <5.0,
                       numbers,
                       parsec,
                       process,
                       vector,
                       bytestring,
                       ghc-prim,
                       containers,
                       GPipe >= 2.2.4,
                       GPipe-GLFW >= 1.4.1.2,
                       Boolean
  hs-source-dirs:      src
  ghc-options:         -Wall -O -threaded -with-rtsopts=-N
  default-language:    Haskell2010
